// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerRuntimePolicy component supported YAML renders policy preview tabs 1`] = `
<div>
  <h5
    class="gl-mt-3"
  >
    Type
  </h5>
   
  <p>
    Container runtime
  </p>
   
  <div>
    <h5
      class="gl-mt-6"
    >
      Description
    </h5>
     
    <p
      data-testid="description"
    >
      test description
    </p>
     
    <h5
      class="gl-mt-6"
    >
      Enforcement status
    </h5>
     
    <p>
      Disabled
    </p>
  </div>
   
  <policy-preview-stub
    class="gl-mt-4"
    initialtab="0"
    policydescription="Deny all traffic"
    policyyaml="apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
description: test description
metadata:
  name: test-policy
spec:
  endpointSelector:
    matchLabels:
      network-policy.gitlab.com/disabled_by: gitlab
"
  />
</div>
`;

exports[`ContainerRuntimePolicy component unsupported YAML renders policy preview tabs 1`] = `
<div>
  <h5
    class="gl-mt-3"
  >
    Type
  </h5>
   
  <p>
    Container runtime
  </p>
   
  <!---->
   
  <policy-preview-stub
    class="gl-mt-4"
    initialtab="1"
    policyyaml="unsupportedPrimaryKey: test"
  />
</div>
`;
